--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,12 @@ twitter_username:
 github_username:  Milo-Sipper
 
 # Build settings
-theme: minima
+remote_theme: jekyll/minima@3cdd14d
+
 plugins:
   - jekyll-feed
   - jekyll-admin
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default.
